force-app/main/default/objects/Vmodel__c/Vmodel__c.object-meta.xml
<CustomObject>
    <label>Vmodel</label>
    <nameField>
        <label>Smodel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vmodels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>