force-app/main/default/objects/Vmodel__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <formula>Vmake__r.Name &amp; &quot;_&quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>