force-app/main/default/objects/Vmodel__c/fields/Ns_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>Ns_Internal_Id__c</fullName>
    <label>Ns Internal Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>