force-app/main/default/objects/Vmodel__c/fields/Vmake__c.field-meta.xml
<CustomField>
    <fullName>Vmake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vmake</label>
    <referenceTo>Vmake__c</referenceTo>
    <relationshipLabel>Vmodels</relationshipLabel>
    <relationshipName>Vmodels</relationshipName>
    <type>Lookup</type>
</CustomField>