force-app/main/default/objects/Vmodel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Vmake__c</columns>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>Ns_Internal_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>